--- a/frase/start2/frase.css
+++ b/frase/start2/frase.css
@@ -8,3 +8,123 @@
 7 ritardare progressivamente l'animazione delle altre 2 parole 
 */
 
+body,
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body {
+  height: 100vh;
+}
+
+/* MAIN */
+
+main {
+  padding: 20px;
+  border: 1px solid black;
+  font-size: 1.6em;
+  line-height: 1.5;
+  font-family: "Bree Serif", serif;
+}
+
+main #testoAlternato p .parole {
+  color: #6a889c;
+  display: inline-block;
+}
+
+span i {
+  display: inline-block;
+}
+
+span i:first-child {
+  animation: myAnimation 10s infinite;
+}
+
+span i:nth-child(2) {
+  animation: myAnimation2 10s ease-out infinite;
+}
+
+span i:last-child {
+  animation: myAnimation3 10s ease-out infinite;
+}
+
+@keyframes myAnimation {
+  0% {
+    opacity: 0;
+    translate: 0px -100px;
+  }
+
+  20% {
+    opacity: 1;
+  }
+
+  40% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+    translate: 0px 100px;
+  }
+}
+
+@keyframes myAnimation2 {
+  0% {
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 0;
+    translate: -170px -100px;
+  }
+
+  60% {
+    opacity: 1;
+  }
+
+  70% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+    translate: -170px 100px;
+  }
+}
+
+@keyframes myAnimation3 {
+  0% {
+    opacity: 0;
+  }
+
+  30% {
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  60% {
+    opacity: 0;
+  }
+
+  65% {
+    opacity: 0;
+    translate: -350px -100px;
+  }
+
+  80% {
+    opacity: 1;
+  }
+
+  85% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+    translate: -350px 100px;
+  }
+}
